--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
             <footer>
                 <p>//////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////</p>
                     <div class="footer-right">
-                        <p>Midnight Line　070-1111-1111　</p>
+                        <p>Toxic Bus　070-1111-1111　</p>
                     </div>
             </footer>
             <script src="js/script.js" defer></script>
